lib/src/pq/generated_bindings_pq.dart


  late final _PQsendQueryPreparedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Int)>>('PQsendQueryPrepared');
  late final _PQsendQueryPrepared = _PQsendQueryPreparedPtr.asFunction<
      int Function(
          ffi.Pointer<PGconn>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          int)>();

  int PQsetSingleRowMode(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQsetSingleRowMode(
      conn,
    );
  }

  late final _PQsetSingleRowModePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQsetSingleRowMode');
  late final _PQsetSingleRowMode =
      _PQsetSingleRowModePtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<PGresult> PQgetResult(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQgetResult(
      conn,
    );
  }

  late final _PQgetResultPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(ffi.Pointer<PGconn>)>>('PQgetResult');
  late final _PQgetResult = _PQgetResultPtr.asFunction<
      ffi.Pointer<PGresult> Function(ffi.Pointer<PGconn>)>();

  int PQisBusy(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQisBusy(
      conn,
    );
  }

  late final _PQisBusyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQisBusy');
  late final _PQisBusy =
      _PQisBusyPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQconsumeInput(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQconsumeInput(
      conn,
    );
  }

  late final _PQconsumeInputPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQconsumeInput');
  late final _PQconsumeInput =
      _PQconsumeInputPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQenterPipelineMode(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQenterPipelineMode(
      conn,
    );
  }

  late final _PQenterPipelineModePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQenterPipelineMode');
  late final _PQenterPipelineMode =
      _PQenterPipelineModePtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQexitPipelineMode(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQexitPipelineMode(
      conn,
    );
  }

  late final _PQexitPipelineModePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQexitPipelineMode');
  late final _PQexitPipelineMode =
      _PQexitPipelineModePtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQpipelineSync(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQpipelineSync(
      conn,
    );
  }

  late final _PQpipelineSyncPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQpipelineSync');
  late final _PQpipelineSync =
      _PQpipelineSyncPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQsendFlushRequest(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQsendFlushRequest(
      conn,
    );
  }

  late final _PQsendFlushRequestPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQsendFlushRequest');
  late final _PQsendFlushRequest =
      _PQsendFlushRequestPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<PGnotify> PQnotifies(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQnotifies(
      conn,
    );
  }

  late final _PQnotifiesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGnotify> Function(ffi.Pointer<PGconn>)>>('PQnotifies');
  late final _PQnotifies = _PQnotifiesPtr.asFunction<
      ffi.Pointer<PGnotify> Function(ffi.Pointer<PGconn>)>();

  int PQputCopyData(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> buffer,
    int nbytes,
  ) {
    return _PQputCopyData(
      conn,
      buffer,
      nbytes,
    );
  }

  late final _PQputCopyDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('PQputCopyData');
  late final _PQputCopyData = _PQputCopyDataPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>, int)>();

  int PQputCopyEnd(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> errormsg,
  ) {
    return _PQputCopyEnd(
      conn,
      errormsg,
    );
  }

  late final _PQputCopyEndPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>>('PQputCopyEnd');
  late final _PQputCopyEnd = _PQputCopyEndPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  int PQgetCopyData(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Pointer<ffi.Char>> buffer,
    int async1,
  ) {
    return _PQgetCopyData(
      conn,
      buffer,
      async1,
    );
  }

  late final _PQgetCopyDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Int)>>('PQgetCopyData');
  late final _PQgetCopyData = _PQgetCopyDataPtr.asFunction<
      int Function(
          ffi.Pointer<PGconn>, ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  int PQgetline(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> buffer,
    int length,
  ) {
    return _PQgetline(
      conn,
      buffer,
      length,
    );
  }

  late final _PQgetlinePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('PQgetline');
  late final _PQgetline = _PQgetlinePtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>, int)>();

  int PQputline(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> string,
  ) {
    return _PQputline(
      conn,
      string,
    );
  }

  late final _PQputlinePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>>('PQputline');
  late final _PQputline = _PQputlinePtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  int PQgetlineAsync(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> buffer,
    int bufsize,
  ) {
    return _PQgetlineAsync(
      conn,
      buffer,
      bufsize,
    );
  }

  late final _PQgetlineAsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('PQgetlineAsync');
  late final _PQgetlineAsync = _PQgetlineAsyncPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>, int)>();

  int PQputnbytes(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> buffer,
    int nbytes,
  ) {
    return _PQputnbytes(
      conn,
      buffer,
      nbytes,
    );
  }

  late final _PQputnbytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('PQputnbytes');
  late final _PQputnbytes = _PQputnbytesPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>, int)>();

  int PQendcopy(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQendcopy(
      conn,
    );
  }

  late final _PQendcopyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQendcopy');
  late final _PQendcopy =
      _PQendcopyPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQsetnonblocking(
    ffi.Pointer<PGconn> conn,
    int arg,
  ) {
    return _PQsetnonblocking(
      conn,
      arg,
    );
  }

  late final _PQsetnonblockingPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>, ffi.Int)>>(
      'PQsetnonblocking');
  late final _PQsetnonblocking =
      _PQsetnonblockingPtr.asFunction<int Function(ffi.Pointer<PGconn>, int)>();

  int PQisnonblocking(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQisnonblocking(
      conn,
    );
  }

  late final _PQisnonblockingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQisnonblocking');
  late final _PQisnonblocking =
      _PQisnonblockingPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQisthreadsafe() {
    return _PQisthreadsafe();
  }

  late final _PQisthreadsafePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('PQisthreadsafe');
  late final _PQisthreadsafe = _PQisthreadsafePtr.asFunction<int Function()>();

  int PQping(
    ffi.Pointer<ffi.Char> conninfo,
  ) {
    return _PQping(
      conninfo,
    );
  }

  late final _PQpingPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>)>>(
          'PQping');
  late final _PQping =
      _PQpingPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int PQpingParams(
    ffi.Pointer<ffi.Pointer<ffi.Char>> keywords,
    ffi.Pointer<ffi.Pointer<ffi.Char>> values,
    int expand_dbname,
  ) {
    return _PQpingParams(
      keywords,
      values,
      expand_dbname,
    );
  }

  late final _PQpingParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Int)>>('PQpingParams');
  late final _PQpingParams = _PQpingParamsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  int PQflush(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQflush(
      conn,
    );
  }

  late final _PQflushPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQflush');
  late final _PQflush =
      _PQflushPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<PGresult> PQfn(
    ffi.Pointer<PGconn> conn,
    int fnid,
    ffi.Pointer<ffi.Int> result_buf,
    ffi.Pointer<ffi.Int> result_len,
    int result_is_int,
    ffi.Pointer<PQArgBlock> args,
    int nargs,
  ) {
    return _PQfn(
      conn,
      fnid,
      result_buf,
      result_len,
      result_is_int,
      args,
      nargs,
    );
  }

  late final _PQfnPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(
              ffi.Pointer<PGconn>,
              ffi.Int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Int,
              ffi.Pointer<PQArgBlock>,
              ffi.Int)>>('PQfn');
  late final _PQfn = _PQfnPtr.asFunction<
      ffi.Pointer<PGresult> Function(
          ffi.Pointer<PGconn>,
          int,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          int,
          ffi.Pointer<PQArgBlock>,
          int)>();

  int PQresultStatus(
    ffi.Pointer<PGresult> res,
  ) {
    return _PQresultStatus(
      res,
    );
  }

  late final _PQresultStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<PGresult>)>>(
          'PQresultStatus');
  late final _PQresultStatus =
      _PQresultStatusPtr.asFunction<int Function(ffi.Pointer<PGresult>)>();

  ffi.Pointer<ffi.Char> PQresStatus(
    int status,
  ) {
    return _PQresStatus(
      status,
    );
  }

  late final _PQresStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
          'PQresStatus');
  late final _PQresStatus =
      _PQresStatusPtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  ffi.Pointer<ffi.Char> PQresultErrorMessage(
    ffi.Pointer<PGresult> res,
  ) {
    return _PQresultErrorMessage(
      res,
    );
  }
